# zephyr-iot-sample

./: .gitignore
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yml
app/: CMakeLists.txt  prj.conf
app/src/: main.c
